# crew-ai

./: LICENSE  README.md  agents.py  app.py  main.py  pyproject.toml  tasks.py
db/: chroma.sqlite3
old/: agents.py  main.py
src/fact_check_crew/: crew.py  db.py  main.py  ui.py
src/fact_check_crew/config/: agents.yaml  tasks.yaml
src/fact_check_crew/tools/: get_data.py  get_events.py  search_news.py  search_tools.py  sec_tools.py
tools/: search_tools.py
