[tool.poetry]
name = "fact_check_crew"
version = "0.1.0"
description = "optmize-response-crew using crewAI"
authors = ["Lucas Zalfa <zalaf.lucas@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.22.2" }
langchain-groq = "^0.1.4"
streamlit = "^1.34.0"
watchdog = "^4.0.0"

[tool.poetry.scripts]
fact_check_crew = "fact_check_crew.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
